<resources>
    <string name="app_name">PertemuanKedua</string>
    <string name="text_view">Text</string>
    <string name="my_phone">My Phone</string>
    <string name="todo">TODO</string>
    <string name="samsung_galaxy_s22">Samsung Galaxy S22</string>
    <string name="_505">505$</string>
    <string name="_505_2">505$</string>
    <string name="spesifikasi_spesifikasi_spesifikasi_spesifikasi_spesifikasi_spesifikasi_spesifikasi_spesifikasi_spesifikasi_spesifikasi_spesifikasi_spesifikasi_spesifikasi">Spesifikasi Spesifikasi Spesifikasi Spesifikasi Spesifikasi Spesifikasi Spesifikasi Spesifikasi Spesifikasi Spesifikasi Spesifikasi Spesifikasi Spesifikasi</string>
</resources>