<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MainActivity">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/my_phone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/samsung"
        android:layout_centerHorizontal="true"
        android:id="@+id/img_phone"
        android:contentDescription="@string/todo" />
    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/samsung_galaxy_s22"
        android:layout_below="@id/img_phone"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/_505"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/img_phone"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/_505_2"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/img_phone"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/desc"
        android:text="@string/spesifikasi_spesifikasi_spesifikasi_spesifikasi_spesifikasi_spesifikasi_spesifikasi_spesifikasi_spesifikasi_spesifikasi_spesifikasi_spesifikasi_spesifikasi"
        android:layout_below="@id/judul"
        />
    <ImageView
        android:id="@+id/iconphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_smartphone_24"
        android:layout_below="@id/desc"
        android:layout_marginTop="8sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="256 GB | 8 GB"
        android:layout_alignBottom="@id/iconphone"
        android:layout_toEndOf="@id/iconphone"
        android:layout_alignTop="@id/iconphone"
        />

    <ImageView
        android:id="@+id/camera"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/baseline_camera_alt_24"
        android:layout_below="@id/iconphone"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="256 GB | 8 GB"
        android:layout_alignBottom="@id/camera"
        android:layout_toEndOf="@id/iconphone"
        android:layout_alignTop="@id/camera"
        />



  </RelativeLayout>